package net.svaroh.passly.testtags.composetags

object ResourceForm {
    const val NAME_INPUT = "ResourceFormNameInput"
    const val URI_INPUT = "ResourceFormUriInput"
    const val USERNAME_INPUT = "ResourceFormUsernameInput"
    const val PASSWORD_INPUT = "ResourceFormPasswordInput"
    const val SAVE_BUTTON = "ResourceFormSaveButton"
    const val GENERATE_PASSWORD_BUTTON = "ResourceFormGeneratePasswordButton"
}

