...
    <string name="more_launch_website">Launch website</string>
    <string name="more_copy_uri">Copy URI</string>
    <string name="more_copy_password">Copy password</string>
    <string name="more_copy_username">Copy username</string>
    <string name="more_copy_metadata_desc">Copy metadata description</string>
    <string name="more_copy_note">Copy note</string>
    <string name="more_edit">Edit</string>
    <string name="more_delete">Delete</string>
    <string name="more_share">Share</string>
    <string name="more_add_to_favourite">Add to favourite</string>
    <string name="more_remove_from_favourite">Remove from favourite</string>

    <string name="folder_more_see_details">See details</string>
...

    <string name="switch_account_see_details">See details</string>
    <string name="switch_account_sign_out">Sign out</string>
    <string name="switch_account_manage_accounts">Manage accounts</string>
    <string name="switch_account_title">Switch account</string>
    <string name="filters_menu_title">Filter view by</string>
    <string name="filters_menu_all_items">All items</string>
    <string name="filters_menu_last_used">Last used (default)</string>
    <string name="filters_menu_favourites">Favourites</string>
    <string name="filters_menu_recently_modified">Recently modified</string>
    <string name="filters_menu_shared_with_me">Shared with me</string>
    <string name="filters_menu_owned_by_me">Owned by me</string>
    <string name="filters_menu_expiry">Expiry</string>
    <string name="filters_menu_loading">Loading</string>
    <string name="filters_menu_folders">Folders</string>
    <string name="filters_menu_tags">Tags</string>
    <string name="filters_menu_groups">Groups</string>

    <string name="main_menu_home">Home</string>
...
    <string name="main_chrome_native_autofill_setup_success">Chrome autofill setup success</string>

    <string name="resource_details_username_header">Username</string>
    <string name="resource_details_password_header">Password</string>
    <string name="resource_details_totp_header">Totp</string>
    <string name="resource_details_url_header">Main URI</string>
    <string name="resource_details_expiry_header">Expiry</string>
    <string name="resource_details_additional_uris">Additional URI</string>
    <string name="resource_details_description_header">Description</string>
    <string name="resource_details_note_header">Note</string>
    <string name="resource_details_note_content">Content</string>
    <string name="resource_details_pin_code_header">Pin code</string>
    <string name="resource_details_pin_code_code">Code</string>
...
    <string name="resource_form_note_info">The note is part of the secret if you want to be able to search this content, use metadata description.</string>
    <string name="resource_form_metadata_description_info">If you want the description to be part of the secret, use note instead.</string>
    <string name="resource_form_resource_name">Resource name</string>
    <string name="resource_form_name">Name</string>
    <string name="resource_form_create_password">Create a password</string>
    <string name="resource_form_create_custom_fields">Create custom fields</string>
    <string name="resource_form_edit_resource">Edit %s</string>
    <string name="resource_form_create_totp">Create a TOTP</string>
    <string name="resource_form_view_advanced_settings">View advanced settings</string>
    <string name="resource_form_view_additional_secrets">Additional secrets</string>
    <string name="resource_form_view_metadata">Metadata</string>
    <string name="resource_form_view_additional_uris">Additional URIs</string>
    <string name="resource_form_create">Create</string>
...
